[package]
name = "gpg-fingerprint-filter"
version = "0.1.0"
authors = ["CUI Hao <cuihao.leo@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Generate an OpenPGP key whose fingerprint matches a specific pattern"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.29"
hex = "0.4.2"
regex = "1.3.7"
clap = { version = "2.33.1", features = ["yaml"] }
num_cpus = "1.13.0"
